# project1

./: .gitlab-ci.yml  data.json  data2.json  data3.json  pyproject.toml
config/: settings.py
main/: admin.py  forms.py  models.py  services.py  urls.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_student_is_active.py  0003_subject.py  0004_student_email.py
main/templates/main/: base.html  contact.html  index.html  student_confirm_delete.html  student_detail.html  student_form.html
main/templates/main/includes/: inc_main_menu.html
users/: apps.py  forms.py  models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
